--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "cinetpay-node-sdk",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
+  "files": ["dist/**"],
+  "engines": {
+    "node": ">=18"
+  },
   "exports": {
     ".": {
       "import": {
